# rva-code-cloud-agents

./: README.md  Untitled.ipynb  justfile  pyproject.toml
data/: support_tickets_no_categories.csv  support_tickets_predicted_categories.csv  support_tickets_predicted_reduced.csv
rva_code_cloud_agents/: agents.py  main.py
rva_code_cloud_agents/agents/: __init__.py  base_agent.py  image_agent.py  powerpoint_agent.py  text_agent.py
